[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pywest"
version = "0.0.2"
description = "A tool to pack Python projects with embeddable Python for Windows distribution."
authors = [
    {name = "qyct"}
]
readme = "README.md"
homepage = "https://github.com/qyct/pywest"
repository = "https://github.com/qyct/pywest"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Archiving :: Packaging",
]
keywords = ["packaging", "bundling", "windows", "embeddable", "python"]
requires-python = ">=3.11"
dependencies = [
    "pillow>=8.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
pywest = "pywest.wcli:main"