[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pywest"
version = "0.0.3"
description = "A tool to pack Python projects with embeddable Python for Windows distribution."
authors = [
    {name = "qyct"}
]
readme = "README.md"
homepage = "https://github.com/qyct/pywest"
repository = "https://github.com/qyct/pywest"
requires-python = ">=3.11"
dependencies = [
    "pillow>=8.0.0"
]

[project.scripts]
pywest = "pywest.wcli:main"